--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 					<ul>
-						<li><a href="https://github.com/sunray1"><i class="icon-github"></i></a>
-						<a href="https://twitter.com/ChandraEarl"><i class="icon-twitter2"></i></a>
-						<a href="mailto:sunray1@ufl.edu"><i class="icon-mail5"></i></a></li>
+						<li><a href="https://github.com/sunray1" onclick="window.open('https://github.com/sunray1');"><i class="icon-github"></i></a>
+						<a href="https://twitter.com/ChandraEarl" onclick="window.open('https://twitter.com/ChandraEarl');"><i class="icon-twitter2"></i></a>
+						<a href="mailto:sunray1@ufl.edu" onclick="window.open('mailto:sunray1@ufl.edu');"><i class="icon-mail5"></i></a></li>
 					</ul>
 				</div>
 			</nav>
@@ -509,7 +509,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel:904-699-8280">904 699 8280</a></p>
+									<p><a href="tel:904-699-8280">904-699-8280</a></p>
 								</div>
 							</div>
 						</div>
