--- a/index.html
+++ b/index.html
@@ -249,11 +249,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(images/frogtree.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://github.com/sunray1/GeneDumper">GeneDumper</a></h3>
-										<span>Website</span>
+										<span>GeneDumper is a software tool designed to search, clean and download GenBank data for a user's taxa and genes of interest. I wrote this to be as generalized as possible, to be used across a variety of taxa, such as insects, plants or vertebrates. It can be used to mine data for megaphylogenies or to calculate gaps in sequencing efforts.</span>
+										<br>
+										<span>It is available for download <a href="https://github.com/sunray1/genedumper">here</a>.</span>
+									</div>
 									</div>
 								</div>
 							</div>
