--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hi I'm Chandra Earl.</strong> I am a Ph.D. Candidate in the Genetics & Genomics program at the University of Florida in Gainesville, Florida. My work bridges many facets of informatics and data science, with a focus on large-scale biodiversity science and producing reproducible, robust and generalized code.</p>
 										<p>I work with large amounts of data, creating megaphylogies across a variety of taxa or developing deep learning models using biological images. In doing so, I have become proficient in a large variety of computational languanges and tools, and I am always ready to experience more! I strongly enjoy working with museum and natural history data and across and within a diverse array of living organisms.</p>
-										<p>Click <a href="#" data-nav-section="research">here</a> to explore some of my current research projects! :)</p>
+										<p>Click <a href="#research_section">here</a> to explore some of my current research projects! :)</p>
 									</div>
 								</div>
 							</div>
@@ -237,6 +237,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</section>
 			
 			<section class="colorlib-work" data-section="research">
+				<a id="research_section">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -248,14 +249,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/frogtree.png);">
+							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="https://github.com/sunray1/GeneDumper">GeneDumper</a></h3>
-										<span>GeneDumper is a software tool designed to search, clean and download GenBank data for a user's taxa and genes of interest. I wrote this to be as generalized as possible, to be used across a variety of taxa, such as insects, plants or vertebrates. It can be used to mine data for megaphylogenies or to calculate gaps in sequencing efforts.</span>
-										<br>
-										<span>It is available for download <a href="https://github.com/sunray1/genedumper">here</a>.</span>
-									</div>
+										<span>Website</span>
 									</div>
 								</div>
 							</div>
@@ -546,4 +544,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 	</body>
 </html>
-
